err/cloud-calculator.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cloud_calculator-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sitio'...
Listing './lib/python3.5/site-packages/sitio/adapters'...
Listing './lib/python3.5/site-packages/sitio/analyser'...
Compiling './lib/python3.5/site-packages/sitio/analyser/aws.py'...
***   File "./lib/python3.5/site-packages/sitio/analyser/aws.py", line 130
    print "Status:", LpStatus[prob.status]
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sitio/analyser/pricelist'...
Compiling './lib/python3.5/site-packages/sitio/analyser/rackspace.py'...
***   File "./lib/python3.5/site-packages/sitio/analyser/rackspace.py", line 71
    print v.name, "=", v.varValue
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sitio/common'...
Compiling './lib/python3.5/site-packages/sitio/common/utils.py'...
***   File "./lib/python3.5/site-packages/sitio/common/utils.py", line 9
    print dc[i][0], dc[i][1], sols[i]
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sitio/model'...
Listing './share'...
Listing './share/python-wheels'...
